process on tdidf, it should fit on xtrain, and transform on xtrain, xval, xtest

--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -33,17 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File data/train.tsv is already downloaded.\n",
-      "File data/validation.tsv is already downloaded.\n",
-      "File data/test.tsv is already downloaded.\n",
-      "File data/text_prepare_tests.tsv is already downloaded.\n"
+      "File data/train.tsv is already downloaded.\nFile data/validation.tsv is already downloaded.\nFile data/test.tsv is already downloaded.\nFile data/text_prepare_tests.tsv is already downloaded.\n"
      ]
     }
    ],
@@ -65,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,21 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/dapenghan/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data] Downloading package stopwords to\n[nltk_data]     /Users/dapenghan/nltk_data...\n[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
    "source": [
     "import nltk\n",
+    "\n",
     "nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords"
    ]
@@ -125,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -218,15 +214,60 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               title                  tags\n",
-       "0                How to draw a stacked dotplot in R?                   [r]\n",
-       "1  mysql select all records where a datetime fiel...          [php, mysql]\n",
-       "2             How to terminate windows phone 8.1 app                  [c#]\n",
-       "3  get current time in a specific country via jquery  [javascript, jquery]\n",
-       "4                      Configuring Tomcat to Use SSL                [java]"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>How to draw a stacked dotplot in R?</td>\n",
+       "      <td>[r]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mysql select all records where a datetime fiel...</td>\n",
+       "      <td>[php, mysql]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>How to terminate windows phone 8.1 app</td>\n",
+       "      <td>[c#]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>get current time in a specific country via jquery</td>\n",
+       "      <td>[javascript, jquery]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Configuring Tomcat to Use SSL</td>\n",
+       "      <td>[java]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -348,18 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current answer for task TextPrepare is:\n",
-      " sqlite php readonly\n",
-      "creating multiple textboxes dynamically\n",
-      "self one prefer javascript\n",
-      "save php date...\n"
+      "Current answer for task TextPrepare is:\n sqlite php readonly\ncreating multiple textboxes dynamically\nself one prefer javascript\nsave php date...\n"
      ]
     }
    ],
@@ -382,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,18 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['draw stacked dotplot r',\n",
-       " 'mysql select records datetime field less specified value',\n",
-       " 'terminate windows phone 81 app']"
+       "['draw stacked dotplot r',\n 'mysql select records datetime field less specified value',\n 'terminate windows phone 81 app']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,16 +521,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current answer for task WordsTagsCount is:\n",
-      " javascript,c#,java\n",
-      "using,php,java...\n"
+      "Current answer for task WordsTagsCount is:\n javascript,c#,java\nusing,php,java...\n"
      ]
     }
    ],
@@ -554,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +608,7 @@
     "i=0\n",
     "for dict in words_sorted:\n",
     "    word = dict[0]\n",
-    "    WORDS_TO_INDEX.update({word:i})####### YOUR CODE HERE ####### FIXME did not get the intension of this#\n",
+    "    WORDS_TO_INDEX.update({word:i})####### YOUR CODE HERE ####### \n",
     "    INDEX_TO_WORDS.update({i:word})####### YOUR CODE HERE #######\n",
     "    if i == 4999:\n",
     "        break\n",
@@ -605,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,16 +687,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape  (100000, 5000)\n",
-      "X_val shape  (30000, 5000)\n",
-      "X_test shape  (20000, 5000)\n"
+      "X_train shape  (100000, 5000)\nX_val shape  (30000, 5000)\nX_test shape  (20000, 5000)\n"
      ]
     }
    ],
@@ -692,17 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.  0.  0. ...,  0.  0.  0.]\n",
-      "5000\n",
-      "Current answer for task BagOfWords is:\n",
-      " 7...\n"
+      "[0. 0. 0. ... 0. 0. 0.]\n5000\nCurrent answer for task BagOfWords is:\n 7...\n"
      ]
     }
    ],
@@ -728,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,11 +784,12 @@
     "    ######################################\n",
     "    ######### YOUR CODE HERE #############\n",
     "    ######################################\n",
-    "    X_train = tfidf_vectorizer.fit_transform(X_train)\n",
-    "    X_val = tfidf_vectorizer.fit_transform(X_val)\n",
-    "    X_test = tfidf_vectorizer.fit_transform(X_test)\n",
+    "    tfidf_vectorizer.fit(X_train)\n",
+    "    X_train_tfidf = tfidf_vectorizer.transform(X_train)\n",
+    "    X_val_tfidf = tfidf_vectorizer.transform(X_val)\n",
+    "    X_test_tfdif = tfidf_vectorizer.transform(X_test)\n",
     "    \n",
-    "    return X_train, X_val, X_test, tfidf_vectorizer.vocabulary_"
+    "    return X_train_tfidf, X_val_tfidf, X_test_tfidf, tfidf_vectorizer.vocabulary_"
    ]
   },
   {
@@ -774,7 +803,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100000,)\n(30000,)\n(20000,)\ndraw stacked dotplot r\nodbc_exec always fail\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.shape(X_train))\n",
+    "print(np.shape(X_val))\n",
+    "print(np.shape(X_test))\n",
+    "print(X_train[0])\n",
+    "print(X_val[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,15 +834,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n"
+      "(100000, 18300)\n(30000, 18300)\n(20000, 4218)\n  (0, 14941)\t0.7126565202061851\n  (0, 12748)\t0.4309937630129157\n  (0, 4792)\t0.5535025387941576\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.shape(X_train_tfidf))\n",
+    "print(np.shape(X_val_tfidf))\n",
+    "print(np.shape(X_test_tfidf))\n",
+    "print(X_train_tfidf[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\nTrue\n"
      ]
     }
    ],
@@ -818,22 +887,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n"
+      "True\nTrue\n"
      ]
     }
    ],
    "source": [
     "######### YOUR CODE HERE #############\n",
     "print('c++' in tfidf_vocab)\n",
-    "print('c#' in tfidf_vocab)"
+    "print('c#' in tfidf_vocab)\n",
+    "#print((X_train_tfidf[0]))\n",
+    "#print((X_val_tfidf))"
    ]
   },
   {
@@ -847,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,13 +926,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n [0 0 0 ... 0 0 0]\n [0 0 0 ... 0 0 0]\n ...\n [0 0 0 ... 0 0 0]\n [0 0 0 ... 0 0 0]\n [0 0 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "mlb = MultiLabelBinarizer(classes=sorted(tags_counts.keys()))\n",
     "y_train = mlb.fit_transform(y_train)\n",
-    "y_val = mlb.fit_transform(y_val)"
+    "y_val = mlb.fit_transform(y_val)\n",
+    "print(y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100000, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.shape(y_train))"
    ]
   },
   {
@@ -874,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +995,11 @@
     "\n",
     "    ######################################\n",
     "    ######### YOUR CODE HERE #############\n",
-    "    ######################################    "
+    "    ######################################    \n",
+    "    lr = LogisticRegression()\n",
+    "    ovsr = OneVsRestClassifier(lr)\n",
+    "    ovsr.fit(X_train, y_train)\n",
+    "    return ovsr"
    ]
   },
   {
@@ -911,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,9 +1048,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title:\todbc_exec always fail\nTrue labels:\tphp,sql\nPredicted labels:\t\n\n\nTitle:\taccess base classes variable within child class\nTrue labels:\tjavascript\nPredicted labels:\t\n\n\nTitle:\tcontenttype application json required rails\nTrue labels:\truby,ruby-on-rails\nPredicted labels:\tjson,ruby-on-rails\n\n\n"
+     ]
+    }
+   ],
    "source": [
     "y_val_pred_inversed = mlb.inverse_transform(y_val_predicted_labels_tfidf)\n",
     "y_val_inversed = mlb.inverse_transform(y_val)\n",
@@ -986,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,9 +1117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-114-5c243405b900>, line 5)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-114-5c243405b900>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    ######################################\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
     "def print_evaluation_scores(y_val, predicted):\n",
     "    \n",
@@ -1274,56 +1391,72 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1335,7 +1468,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1346,5 +1479,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
