passing, but need more understanding

--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
     }
    ],
    "source": [
-    "test_predictions = experiment_classifier_tfidf.predict(X_test_tfidf)######### YOUR CODE HERE #############\n",
+    "test_predictions = classifier_tfidf.predict(X_test_tfidf)######### YOUR CODE HERE #############\n",
     "test_pred_inversed = mlb.inverse_transform(test_predictions)\n",
     "\n",
     "test_predictions_for_submission = '\\n'.join('%i\\t%s' % (i, ','.join(row)) for i, row in enumerate(test_pred_inversed))\n",
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,22 +1355,29 @@
     "    ######################################\n",
     "    ######### YOUR CODE HERE #############\n",
     "    ######################################\n",
+    "    index_tag = tags_classes.index(tag)\n",
+    "    #print(index_tag)\n",
+    "    #word = index_to_words[index_tag]\n",
+    "    \n",
+    "    #index_est = list(all_words).index(word) \n",
+    "    #print(index_est)\n",
+    "\n",
+    "    est = classifier.estimators_[index_tag]\n",
+    "    coef = est.coef_.argsort().tolist()[0]\n",
+    "    #print(coef)\n",
+    "#    coef = sorted(coef)\n",
     "    \n",
     "    \n",
     "    \n",
-    "    est = classifier.estimators_[0]\n",
-    "    coef = est.get_params()\n",
-    "    coef = sorted(coef)\n",
-    "    \n",
-    "    top_positive_words = coef[:5]# top-5 words sorted by the coefficiens.\n",
-    "    top_negative_words = coef[-5:]# bottom-5 words  sorted by the coefficients.\n",
+    "    top_positive_words = [index_to_words[index] for index in coef[-5:]]# top-5 words sorted by the coefficiens.\n",
+    "    top_negative_words = [index_to_words[index] for index in coef[:5]]# bottom-5 words  sorted by the coefficients.\n",
     "    print('Top positive words:\\t{}'.format(', '.join(top_positive_words)))\n",
     "    print('Top negative words:\\t{}\\n'.format(', '.join(top_negative_words)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1378,16 +1385,16 @@
      "output_type": "stream",
      "text": [
       "Tag:\tc\n",
-      "Top positive words:\tC, class_weight, dual, fit_intercept, intercept_scaling\n",
-      "Top negative words:\trandom_state, solver, tol, verbose, warm_start\n",
+      "Top positive words:\tgcc, printf, scanf, malloc, c\n",
+      "Top negative words:\tjava, php, python, javascript, c#\n",
       "\n",
       "Tag:\tc++\n",
-      "Top positive words:\tC, class_weight, dual, fit_intercept, intercept_scaling\n",
-      "Top negative words:\trandom_state, solver, tol, verbose, warm_start\n",
+      "Top positive words:\topencv, mfc, boost, qt, c++\n",
+      "Top negative words:\tjava, php, python, javascript, c#\n",
       "\n",
       "Tag:\tlinux\n",
-      "Top positive words:\tC, class_weight, dual, fit_intercept, intercept_scaling\n",
-      "Top negative words:\trandom_state, solver, tol, verbose, warm_start\n",
+      "Top positive words:\tsignal, address, c, ubuntu, linux\n",
+      "Top negative words:\tjavascript, c#, jquery, array, method\n",
       "\n"
      ]
     }
@@ -1444,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1463,20 +1470,22 @@
       "Task BagOfWords:\n",
       " 7...\n",
       "Task MultilabelClassification:\n",
-      " 0\tmysql,php\n",
-      "1\thtml,javascript,jquery\n",
-      "2\tpython\n",
+      " 0\tphp\n",
+      "1\tjavascript,jquery\n",
+      "2\t\n",
       "3\tjavascript,jquery\n",
-      "4\tandroid\n",
+      "4\tandroid,java\n",
       "5\tphp,xml\n",
       "6\tjson\n",
-      "7\tjava,...\n"
+      "7\tjava\n",
+      "8\tpython\n",
+      "9\th...\n"
      ]
     }
    ],
    "source": [
     "STUDENT_EMAIL = 'birdbird1117@gmail.com'# EMAIL \n",
-    "STUDENT_TOKEN = 'QauOrbWjDbeBjHyt'# TOKEN \n",
+    "STUDENT_TOKEN = 'tl987ZET8MhxbMbi'# TOKEN \n",
     "grader.status()"
    ]
   },
@@ -1489,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
