--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -42,11 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File data/train.txt is already downloaded.\n",
+      "File data/validation.txt is already downloaded.\n",
+      "File data/test.txt is already downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -68,12 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "re_url = re.compile(r'^https?:\\/\\/[0-9a-zA-Z\\_\\.\\-\\/]*')\n",
+    "re_nickname = re.compile(r'^@[0-9a-zA-Z\\_\\.\\-\\/]*')\n",
+    "\n",
     "def read_data(file_path):\n",
     "    tokens = []\n",
     "    tags = []\n",
@@ -92,11 +102,14 @@
     "            token, tag = line.split()\n",
     "            # Replace all urls with <URL> token\n",
     "            # Replace all users with <USR> token\n",
-    "\n",
+    "            \n",
     "            ######################################\n",
     "            ######### YOUR CODE HERE #############\n",
     "            ######################################\n",
-    "            \n",
+    "            token = re.sub(re_url, '<URL>', token)\n",
+    "            token = re.sub(re_nickname, '<USR>', token)\n",
+    "            #or use token.startwith()\n",
+    "\n",
     "            tweet_tokens.append(token)\n",
     "            tweet_tags.append(tag)\n",
     "            \n",
@@ -115,15 +128,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_tokens, train_tags = read_data('data/train.txt')\n",
     "validation_tokens, validation_tags = read_data('data/validation.txt')\n",
     "test_tokens, test_tags = read_data('data/test.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['RT',\n",
+       "  '<USR>',\n",
+       "  ':',\n",
+       "  'Online',\n",
+       "  'ticket',\n",
+       "  'sales',\n",
+       "  'for',\n",
+       "  'Ghostland',\n",
+       "  'Observatory',\n",
+       "  'extended',\n",
+       "  'until',\n",
+       "  '6',\n",
+       "  'PM',\n",
+       "  'EST',\n",
+       "  'due',\n",
+       "  'to',\n",
+       "  'high',\n",
+       "  'demand',\n",
+       "  '.',\n",
+       "  'Get',\n",
+       "  'them',\n",
+       "  'before',\n",
+       "  'they',\n",
+       "  'sell',\n",
+       "  'out',\n",
+       "  '...'],\n",
+       " ['Apple',\n",
+       "  'MacBook',\n",
+       "  'Pro',\n",
+       "  'A1278',\n",
+       "  '13.3',\n",
+       "  '\"',\n",
+       "  'Laptop',\n",
+       "  '-',\n",
+       "  'MD101LL/A',\n",
+       "  '(',\n",
+       "  'June',\n",
+       "  ',',\n",
+       "  '2012',\n",
+       "  ')',\n",
+       "  '-',\n",
+       "  'Full',\n",
+       "  'read',\n",
+       "  'by',\n",
+       "  'eBay',\n",
+       "  '<URL>',\n",
+       "  '<URL>'],\n",
+       " ['Happy',\n",
+       "  'Birthday',\n",
+       "  '<USR>',\n",
+       "  '!',\n",
+       "  'May',\n",
+       "  'Allah',\n",
+       "  's.w.t',\n",
+       "  'bless',\n",
+       "  'you',\n",
+       "  'with',\n",
+       "  'goodness',\n",
+       "  'and',\n",
+       "  'happiness',\n",
+       "  '.'],\n",
+       " ['<USR>',\n",
+       "  'the',\n",
+       "  'quest',\n",
+       "  'line',\n",
+       "  'im',\n",
+       "  'assuming',\n",
+       "  'it',\n",
+       "  'will',\n",
+       "  'be',\n",
+       "  'the',\n",
+       "  'same',\n",
+       "  'way',\n",
+       "  'with',\n",
+       "  'awe',\n",
+       "  'thur'],\n",
+       " ['<USR>',\n",
+       "  '<USR>',\n",
+       "  '<USR>',\n",
+       "  '<USR>',\n",
+       "  '<USR>',\n",
+       "  'still',\n",
+       "  'perception',\n",
+       "  ',',\n",
+       "  'and',\n",
+       "  'what',\n",
+       "  'you',\n",
+       "  'key',\n",
+       "  'off',\n",
+       "  'may',\n",
+       "  'differ',\n",
+       "  'from',\n",
+       "  'me',\n",
+       "  '.',\n",
+       "  'Back',\n",
+       "  'to',\n",
+       "  'Selma',\n",
+       "  'example',\n",
+       "  ',',\n",
+       "  'iow',\n",
+       "  '.']]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_tokens[:5]"
    ]
   },
   {
@@ -135,11 +266,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RT\tO\n",
+      "<USR>\tO\n",
+      ":\tO\n",
+      "Online\tO\n",
+      "ticket\tO\n",
+      "sales\tO\n",
+      "for\tO\n",
+      "Ghostland\tB-musicartist\n",
+      "Observatory\tI-musicartist\n",
+      "extended\tO\n",
+      "until\tO\n",
+      "6\tO\n",
+      "PM\tO\n",
+      "EST\tO\n",
+      "due\tO\n",
+      "to\tO\n",
+      "high\tO\n",
+      "demand\tO\n",
+      ".\tO\n",
+      "Get\tO\n",
+      "them\tO\n",
+      "before\tO\n",
+      "they\tO\n",
+      "sell\tO\n",
+      "out\tO\n",
+      "...\tO\n",
+      "\n",
+      "Apple\tB-product\n",
+      "MacBook\tI-product\n",
+      "Pro\tI-product\n",
+      "A1278\tI-product\n",
+      "13.3\tI-product\n",
+      "\"\tI-product\n",
+      "Laptop\tI-product\n",
+      "-\tI-product\n",
+      "MD101LL/A\tI-product\n",
+      "(\tO\n",
+      "June\tO\n",
+      ",\tO\n",
+      "2012\tO\n",
+      ")\tO\n",
+      "-\tO\n",
+      "Full\tO\n",
+      "read\tO\n",
+      "by\tO\n",
+      "eBay\tB-company\n",
+      "<URL>\tO\n",
+      "<URL>\tO\n",
+      "\n",
+      "Happy\tO\n",
+      "Birthday\tO\n",
+      "<USR>\tO\n",
+      "!\tO\n",
+      "May\tO\n",
+      "Allah\tB-person\n",
+      "s.w.t\tO\n",
+      "bless\tO\n",
+      "you\tO\n",
+      "with\tO\n",
+      "goodness\tO\n",
+      "and\tO\n",
+      "happiness\tO\n",
+      ".\tO\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3):\n",
     "    for token, tag in zip(train_tokens[i], train_tags[i]):\n",
@@ -162,10 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict"
@@ -173,10 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_dict(tokens_or_tags, special_tokens):\n",
@@ -189,20 +385,30 @@
     "    idx2tok = []\n",
     "    \n",
     "    # Create mappings from tokens (or tags) to indices and vice versa.\n",
-    "    # At first, add special tokens (or tags) to the dictionaries.\n",
+    "    # Add special tokens (or tags) to the dictionaries.\n",
     "    # The first special token must have index 0.\n",
     "    \n",
     "    # Mapping tok2idx should contain each token or tag only once. \n",
-    "    # To do so, you should:\n",
-    "    # 1. extract unique tokens/tags from the tokens_or_tags variable, which is not\n",
-    "    #    occure in special_tokens (because they could have non-empty intersection)\n",
-    "    # 2. index them (for example, you can add them into the list idx2tok\n",
-    "    # 3. for each token/tag save the index into tok2idx).\n",
+    "    # To do so, you should extract unique tokens/tags from the tokens_or_tags variable\n",
+    "    # and then index them (for example, you can add them into the list idx2tok\n",
+    "    # and for each token/tag save the index into tok2idx).\n",
     "    \n",
     "    ######################################\n",
     "    ######### YOUR CODE HERE #############\n",
     "    ######################################\n",
-    "    \n",
+    "    idx = 0\n",
+    "    for token in special_tokens:\n",
+    "        tok2idx[token] = idx\n",
+    "        idx2tok.append(token)\n",
+    "        idx += 1\n",
+    "        \n",
+    "    for tokens in tokens_or_tags:\n",
+    "        for token in tokens:\n",
+    "            if token not in tok2idx:\n",
+    "                tok2idx[token] = idx\n",
+    "                idx2tok.append(token)\n",
+    "                idx += 1\n",
+    "                \n",
     "    return tok2idx, idx2tok"
    ]
   },
@@ -217,10 +423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "special_tokens = ['<UNK>', '<PAD>']\n",
@@ -240,10 +444,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def words2idxs(tokens_list):\n",
@@ -270,10 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def batches_generator(batch_size, tokens, tags,\n",
@@ -325,10 +525,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -914,7 +1112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -928,7 +1126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
