--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -535,10 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class BiLSTMModel():\n",
@@ -565,10 +563,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def declare_placeholders(self):\n",
@@ -576,7 +572,7 @@
     "\n",
     "    # Placeholders for input and ground truth output.\n",
     "    self.input_batch = tf.placeholder(dtype=tf.int32, shape=[None, None], name='input_batch') \n",
-    "    self.ground_truth_tags = ######### YOUR CODE HERE #############\n",
+    "    self.ground_truth_tags = tf.placeholder(dtype=tf.in32, shape=[None, None], name='ground_truth_tags')\n",
     "  \n",
     "    # Placeholder for lengths of the sequences.\n",
     "    self.lengths = tf.placeholder(dtype=tf.int32, shape=[None], name='lengths') \n",
@@ -586,15 +582,13 @@
     "    self.dropout_ph = tf.placeholder_with_default(tf.cast(1.0, tf.float32), shape=[])\n",
     "    \n",
     "    # Placeholder for a learning rate (tf.float32).\n",
-    "    self.learning_rate_ph = ######### YOUR CODE HERE #############"
+    "    self.learning_rate_ph = tf.placeholder(tf.float32, shape=[])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiLSTMModel.__declare_placeholders = classmethod(declare_placeholders)"
@@ -624,10 +618,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_layers(self, vocabulary_size, embedding_dim, n_hidden_rnn, n_tags):\n",
@@ -635,21 +627,37 @@
     "    \n",
     "    # Create embedding variable (tf.Variable) with dtype tf.float32\n",
     "    initial_embedding_matrix = np.random.randn(vocabulary_size, embedding_dim) / np.sqrt(embedding_dim)\n",
-    "    embedding_matrix_variable = ######### YOUR CODE HERE #############\n",
+    "    embedding_matrix_variable = tf.Variable(initial_embedding_matrix, dtype=tf.float32, name='embeddings_matrix')\n",
     "    \n",
     "    # Create RNN cells (for example, tf.nn.rnn_cell.BasicLSTMCell) with n_hidden_rnn number of units \n",
     "    # and dropout (tf.nn.rnn_cell.DropoutWrapper), initializing all *_keep_prob with dropout placeholder.\n",
-    "    forward_cell =  ######### YOUR CODE HERE #############\n",
-    "    backward_cell =  ######### YOUR CODE HERE #############\n",
+    "    forward_cell = tf.nn.rnn_cell.DropoutWrapper(\n",
+    "        tf.nn.rnn_cell.BasicLSTMCell(n_hidden_rnn), \n",
+    "        input_keep_prob = self.dropout_ph, \n",
+    "        output_keep_prob = self.dropout_ph, \n",
+    "        state_keep_prob = self.dropout_ph\n",
+    "    )\n",
+    "    backward_cell = tf.nn.rnn_cell.DropoutWrapper(\n",
+    "        tf.nn.rnn_cell.BasicLSTMCell(n_hidden_rnn), \n",
+    "        input_keep_prob = self.dropout_ph, \n",
+    "        output_keep_prob = self.dropout_ph, \n",
+    "        state_keep_prob = self.dropout_ph\n",
+    "    )\n",
     "\n",
     "    # Look up embeddings for self.input_batch (tf.nn.embedding_lookup).\n",
     "    # Shape: [batch_size, sequence_len, embedding_dim].\n",
-    "    embeddings =  ######### YOUR CODE HERE #############\n",
+    "    embeddings =  tf.nn.embedding_lookup(embedding_matrix_variable, self.input_batch)\n",
     "    \n",
     "    # Pass them through Bidirectional Dynamic RNN (tf.nn.bidirectional_dynamic_rnn).\n",
     "    # Shape: [batch_size, sequence_len, 2 * n_hidden_rnn]. \n",
     "    # Also don't forget to initialize sequence_length as self.lengths and dtype as tf.float32.\n",
-    "    (rnn_output_fw, rnn_output_bw), _ =  ######### YOUR CODE HERE #############\n",
+    "    (rnn_output_fw, rnn_output_bw), _ =  tf.nn.bidirectional_dynamic_rnn(\n",
+    "        forward_cell, \n",
+    "        backward_cell, \n",
+    "        inputs=embeddings, \n",
+    "        sequence_length=self.lengths, \n",
+    "        dtype= tf.float32)\n",
+    "    \n",
     "    rnn_output = tf.concat([rnn_output_fw, rnn_output_bw], axis=2)\n",
     "\n",
     "    # Dense layer on top.\n",
@@ -659,10 +667,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiLSTMModel.__build_layers = classmethod(build_layers)"
@@ -677,30 +683,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 56,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compute_predictions(self):\n",
     "    \"\"\"Transforms logits to probabilities and finds the most probable tags.\"\"\"\n",
     "    \n",
     "    # Create softmax (tf.nn.softmax) function\n",
-    "    softmax_output = ######### YOUR CODE HERE #############\n",
+    "    softmax_output = tf.nn.softmax(self.logits)\n",
     "    \n",
     "    # Use argmax (tf.argmax) to get the most probable tags\n",
     "    # Don't forget to set axis=-1\n",
     "    # otherwise argmax will be calculated in a wrong way\n",
-    "    self.predictions = ######### YOUR CODE HERE #############"
+    "    self.predictions = tf.arg_max(softmax_output, axis = -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiLSTMModel.__compute_predictions = classmethod(compute_predictions)"
@@ -729,7 +731,7 @@
     "    \n",
     "    # Create cross entropy function function (tf.nn.softmax_cross_entropy_with_logits)\n",
     "    ground_truth_tags_one_hot = tf.one_hot(self.ground_truth_tags, n_tags)\n",
-    "    loss_tensor =  ######### YOUR CODE HERE #############\n",
+    "    loss_tensor =  tf.nn.softmax_cross_entropy_with_logits(ground_truth_tags_one_hot, self.logits)\n",
     "    \n",
     "    mask = tf.cast(tf.not_equal(self.input_batch, PAD_index), tf.float32)\n",
     "    # Create loss function which doesn't operate with <PAD> tokens (tf.reduce_mean)\n",
