--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -720,10 +720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compute_loss(self, n_tags, PAD_index):\n",
@@ -737,15 +735,13 @@
     "    # Create loss function which doesn't operate with <PAD> tokens (tf.reduce_mean)\n",
     "    # Be careful that the argument of tf.reduce_mean should be\n",
     "    # multiplication of mask and loss_tensor.\n",
-    "    self.loss =  ######### YOUR CODE HERE #############"
+    "    self.loss = tf.reduce_mean(tf.reduce_sum(tf.multiply(loss_tensor, mask), axis=-1)/tf.reduce_sum(mask, axis=-1)) #FIXME"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiLSTMModel.__compute_loss = classmethod(compute_loss)"
@@ -762,17 +758,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def perform_optimization(self):\n",
     "    \"\"\"Specifies the optimizer and train_op for the model.\"\"\"\n",
     "    \n",
     "    # Create an optimizer (tf.train.AdamOptimizer)\n",
-    "    self.optimizer =  ######### YOUR CODE HERE #############\n",
+    "    self.optimizer = tf.train.AdamOptimizer\n",
     "    self.grads_and_vars = self.optimizer.compute_gradients(self.loss)\n",
     "    \n",
     "    # Gradient clipping (tf.clip_by_norm) for self.grads_and_vars\n",
@@ -780,17 +774,15 @@
     "    # because self.grads_and_vars contains also variables.\n",
     "    # list comprehension might be useful in this case.\n",
     "    clip_norm = tf.cast(1.0, tf.float32)\n",
-    "    self.grads_and_vars =  ######### YOUR CODE HERE #############\n",
+    "    self.grads_and_vars =  [(max(clip_norm, grad), var) for grad, var in self.grads_and_vars]\n",
     "    \n",
     "    self.train_op = self.optimizer.apply_gradients(self.grads_and_vars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiLSTMModel.__perform_optimization = classmethod(perform_optimization)"
@@ -808,10 +800,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def init_model(self, vocabulary_size, n_tags, embedding_dim, n_hidden_rnn, PAD_index):\n",
@@ -824,10 +814,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiLSTMModel.__init__ = classmethod(init_model)"
@@ -851,10 +839,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train_on_batch(self, session, x_batch, y_batch, lengths, learning_rate, dropout_keep_probability):\n",
@@ -869,10 +855,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiLSTMModel.train_on_batch = classmethod(train_on_batch)"
